--- a/app/globals.css
+++ b/app/globals.css
@@ -6,6 +6,8 @@
   --foreground-rgb: 0, 0, 0;
   --background-start-rgb: 255, 255, 255;
   --background-end-rgb: 255, 255, 255;
+  --purple-500-rgb: 168, 85, 247;
+  --cyan-500-rgb: 6, 182, 212;
 }
 
 * {
